# CryptoGraphix

./: .gitignore  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp  script.sh  src.cpp
Database/: DatabaseConnection.cpp  SessionManagement.cpp  UserManagement.cpp
Logger/: App.logs
include/: AES256Encryption.h  AES256Encryption.hpp  AESImageEncryptor.h  ChisquareTest.hpp  CorrelationTest.hpp  EncryptionQualityTest.hpp  EncryptionStrategy.hpp  GraphicsUtils.hpp  HammingDistanceTest.hpp  HidingStrategy.hpp  IEncrypt.hpp  IEncryptor.h  IHide.hpp  ITest.hpp  ImageReader.h  ImageWriter.h  InformationEntropyTest.hpp  LSB.hpp  LogMacros.h  Macros.h  Metadata.hpp  MetadataManager.hpp  NPCRTest.hpp  TestRunner.hpp  TimePerformanceTest.hpp  UACI.hpp  UnitTest.hpp  Utils.hpp
scripts/: script.sh  setup.sh
src/: AES256Encryption.cpp  ErrorHandler.cpp  FileLister.cpp  GraphicsUtils.cpp  IEncrypt.cpp  ImageReader.cpp  ImageWriter.cpp  Logger.cpp  PrepareTesting.cpp  main.cpp  menu.cpp
